# fhir-converter

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: greetings.yml  mkdocs-gh-pages.yml  python-package.yml
data/sample/ccda/: 170.314B2_Amb_CCD.ccda
data/sample/stu3/: AllergyIntolerance.json
data/templates/ccda/: DischargeSummary.liquid  Header.liquid  HistoryandPhysical.liquid  LabsandVitals.liquid  Pampi.liquid  ProcedureNote.liquid  ProgressNote.liquid
data/templates/ccda/DataType/: _CodeableConcept.liquid
data/templates/ccda/Resource/: _Patient.liquid
data/templates/ccda/Section/: _Immunization.liquid  _Problem.liquid  _Procedure.liquid
docs/: README.md
docs/css/: github-dark-dimmed.css  mkdocs-dark-theme.css
fhir_converter/: __main__.py  cli.py  datatypes.py  exceptions.py  expressions.py  filters.py  hl7.py  loaders.py  parsers.py  processors.py  renderers.py  tags.py  templates.py  utils.py
fhir_converter/expressions/: __init__.py  common.py
fhir_converter/expressions/boolean/: parse.py
fhir_converter/expressions/filtered/: parse.py
fhir_converter/expressions/loop/: parse.py
fhir_converter/templates/ccda/: CCD.liquid  ConsultationNote.liquid  Header.liquid  OperativeNote.liquid  ReferralNote.liquid  TransferSummary.liquid  cda_narrative.xsl
fhir_converter/templates/ccda/Resource/: _AllergyIntolerance.liquid  _Composition.liquid  _Immunization.liquid
fhir_converter/templates/ccda/Section/: _AllergiesAndAdverseReaction.liquid  (+4 more)
fhir_converter/templates/hl7v2/: ADT_A01.liquid  ADT_A01_test.liquid  ADT_A02.liquid  ADT_A03.liquid  ADT_A04.liquid  ADT_A05.liquid  ADT_A06.liquid  ADT_A07.liquid  ADT_A08.liquid  ADT_A09.liquid  ADT_A10.liquid  ADT_A11.liquid  ADT_A13.liquid  ADT_A14.liquid  ADT_A15.liquid  ADT_A16.liquid  ADT_A25.liquid  ADT_A26.liquid  ADT_A27.liquid  ADT_A28.liquid  ADT_A29.liquid  ADT_A31.liquid  ADT_A40.liquid  ADT_A41.liquid  ADT_A45.liquid  ADT_A47.liquid  ADT_A60.liquid  BAR_P01.liquid  BAR_P02.liquid  BAR_P12.liquid  DFT_P03.liquid  DFT_P11.liquid  MDM_T01.liquid  MDM_T02.liquid  MDM_T05.liquid  MDM_T06.liquid  MDM_T09.liquid  MDM_T10.liquid  OMG_O19.liquid  OML_O21.liquid  (+18 more)
fhir_converter/templates/stu3/: Account.liquid  Appointment.liquid  Composition.liquid  Condition.liquid  Consent.liquid  Contract.liquid  DiagnosticReport.liquid  Encounter.liquid  ExplanationOfBenefit.liquid  Goal.liquid  GuidanceResponse.liquid  HealthcareService.liquid  ImagingStudy.liquid  ImmunizationRecommendation.liquid  Location.liquid  MeasureReport.liquid  MedicationRequest.liquid  MessageDefinition.liquid  Observation.liquid  RequestGroup.liquid  Resource.liquid  RiskAssessment.liquid  Schedule.liquid  Slot.liquid  SupplyRequest.liquid
scripts/: benchmark.py  ccda.py  driver.py  examples.py  hl7v2.py
tests/: test_filters.py  test_hl7.py  test_loaders.py  test_parsers.py  test_renderers.py  test_tags.py  test_utils.py
tests/data/: simple.xml
tests/data/ccda/: CCD.ccda
(+184 files in other folders)
